--- a/extension/_locales/pl/messages.json
+++ b/extension/_locales/pl/messages.json
@@ -4,5 +4,14 @@
   },
   "empty": {
     "message": "pusto"
+  },
+  "requests_blocked": {
+    "message": "Zablokowanych zasobów"
+  },
+  "disabled_for_domain": {
+    "message": "nieaktywny dla tej domeny"
+  },
+  "report_issue": {
+    "message": "zgłoś błąd"
   }
 }
